versioned_docs/version-2.0.0/concepts/reference/glossary/end-to-end-testing.md
---
id: end-to-end-testing
title: Creating end to end tests with Keploy
sidebar_label: End To End Testing
description: This glossary has an explanation of all the terminologies that beginners find difficult to understand at first glance.
tags:
  - explanation
  - Glossary
keywords:
  - API
---

End-to-end testing or E2E testing is a testing technique that validates the functionality and performance of an entire software application from start to finish. This means that E2E tests simulate real-world user scenarios and replicate live data. The goal of E2E testing is to identify bugs that arise when all components are integrated, ensuring that the application delivers the expected output as a unified entity.

E2E testing is typically performed by quality assurance (QA) teams, and are executed in dedicated test environments. This normally takes place after functional and system testing. End-to-end testing typically includes testing the following:

- **The application's functionality**: Does the application do what it is supposed to do?
- **The application's reliability**: Does the application work consistently?
- **The application's performance**: How fast and efficient is the application?
- **The application's security**: Is the application protected from unauthorized access or misuse?
- **The application's usability**: Is the application easy to use?

## Benefits of End to End Testing

End-to-end testing is an important part of the software development process. It helps to ensure that applications are of high quality and meet the needs of their users.

Here are some of the benefits of end-to-end testing:

- **Reduced risk of defects:** End-to-end testing helps to identify and fix defects early in the development process, which can reduce the risk of defects reaching production.
- **Improved user experience:** End-to-end testing can help to ensure that applications are user-friendly and meet the needs of their users.
- **Earlier bug detection:** End-to-end testing can help to detect bugs earlier in the development process, which can save time and money.
- **Increased productivity:** End-to-end testing can help to increase productivity by reducing the amount of time and effort required to find and fix bugs.
- **Improved confidence in releases:** End-to-end testing can help to increase confidence in releases by providing assurance that applications are of high quality.
- **Enhanced collaboration:** End-to-end testing can help to enhance collaboration between development teams by providing a common understanding of the application's requirements and functionality.

## Challenges of End to End Testing ?

- It can be time-consuming and expensive.
- It can be difficult to automate E2E tests.
- It can be difficult to create test cases that cover all possible real-world scenarios.

Despite the challenges, E2E testing is an important part of the software development lifecycle. By identifying and fixing bugs early, E2E testing can help to ensure that the application is released with a high level of quality.

## Solution to the above challenges

Keploy generate E2E API tests with built-in-mocks or stubs by recording your application network calls making your testing process not only faster than unit tests but also incredibly efficient.

<img src="https://keploy.io/docs/gif/record-tc.gif"/>

### How Keploy works?

Keploy acts a proxy in your application that captures and replays all network interaction served to application from any source. Once you start the application in record mode to capture API calls as test cases. Now, when the application serves an API, all the unique network interactions are stored within Keploy server as a test-case.

Let's assume you developed released version(v2) of your application. To test locally, start the Keploy in `test mode` to replay all recorded API calls/test-cases previously captured in record-mode.

Now, when the application starts:

- Keploy will run all the previously recorded test-cases/API calls with a 5 sec delay by default, which is configurable application build time of your application. You can also increase the delay time based on your application's startup time.
- When the application will try to talk to any dependencies like DBs, Routers, vendor services, Keploy will intercept and provide the previously recorded dependency response.
- Keploy will compare the API response to the previously captured response and a report will be generated on the Keploy console.

Since you don't require to setup any test environment, Keploy can be used in any environment, be it local, staging, or production. Also, since the test cases are generated based on the real-time capturing of API calls from your application, they will be from real-world scenarios.

## Conclusion

End-to-end (E2E) testing is a important component of the software development process, as it ensures that applications function correctly and meet user expectations across all integrated components. While E2E testing presents challenges, such as time consumption and automation complexity, tools like Keploy offer powerful solutions to streamline the process. By capturing and replaying real-world API interactions, Keploy enhances the efficiency and effectiveness of end-to-end testing, contributing to the delivery of high-quality software.

## FAQs

### What is End-to-End Testing?

End-to-end testing validates the complete functionality of a software application by simulating real-world scenarios and interactions from start to finish.

### Why is End-to-End Testing Important?

It ensures that all integrated components of an application work together as expected, helping to identify and fix bugs that might not be detected in isolated tests.

### What Challenges are Associated with End-to-End Testing?

Challenges include the time and cost involved, difficulty in automating tests, and creating comprehensive test cases that cover all possible scenarios.

### How Does Keploy Simplify End-to-End Testing?

Keploy simplifies E2E testing by recording API calls and generating test cases with built-in mocks or stubs. It provides a streamlined process for capturing and replaying real-world interactions, enhancing testing efficiency.
